--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass-loader": "^10.0.2",
     "style-loader": "^1.3.0",
     "url-loader": "^4.1.1",
+    "vue": "^2.6.14",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.2",
@@ -42,7 +43,6 @@
   "dependencies": {
     "@~crazy/merge": "0.0.3",
     "core-js": "^3.6.5",
-    "element-resize-detector": "^1.2.2",
-    "vue": "^2.6.11"
+    "element-resize-detector": "^1.2.2"
   }
 }
