--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@~crazy/astar",
-  "version": "0.0.0-13",
+  "version": "0.0.0",
   "description": "astar",
   "main": "dist/astar.js",
   "scripts": {
